<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_40dp"
    android:paddingEnd="@dimen/dimen_40dp"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        style="@style/MyDoctorText"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/message_sign_in"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelEmail"
        style="@style/MyDoctorText.Grey"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_email_address"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelPassword"
        style="@style/MyDoctorText.Grey"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_password"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        style="@style/MyDoctorText.Grey"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_forgot_my_password"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/MyDoctorButton"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:text="@string/button_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateAccount"
        style="@style/MyDoctorText.Grey"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/label_create_new_account"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>