<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".view.GetStartedActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_black_transparent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        style="@style/MyDoctorText.White"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_90dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/message_get_started_page"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/MyDoctorButton.White"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:layout_marginBottom="@dimen/dimen_42dp"
        android:text="@string/button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        style="@style/MyDoctorButton"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:text="@string/button_get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>