<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <include
        android:id="@+id/toolbarSignUp"
        layout="@layout/layout_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelFullName"
        style="@style/MyDoctorText.Grey"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_full_name"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSignUp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtFullName"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelFullName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelJob"
        style="@style/MyDoctorText.Grey"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_job"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtFullName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtJob"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelJob" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelEmail"
        style="@style/MyDoctorText.Grey"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_email_address"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtJob" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelPassword"
        style="@style/MyDoctorText.Grey"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_80dp"
        android:text="@string/label_password"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        style="@style/MyDoctorEditText"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="@drawable/bg_rectangle_white_rounded"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dimen_8dp"
        android:paddingEnd="@dimen/dimen_8dp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/MyDoctorButton"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:text="@string/button_continue"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>